fix: icon colors on safari

--- a/static/global.css
+++ b/static/global.css
@@ -10,14 +10,12 @@
 
 body {
 	margin: 0;
+	color: var(--accent-color);
 }
-
-/* global styling */
 
 * {
 	font-family: 'Quicksand', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	font-weight: 300;
-	color: var(--accent-color);
 }
 
 /* global styles for tag names */ 
@@ -31,6 +29,7 @@ button {
 	border-radius: 4rem;
 	font-size: 0.8rem;
 	transition: transform 0.2s linear, background-color 0.2s linear;
+	color: var(--accent-color);
 }
 
 button:active {
